<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg"
    tools:context=".SettingActivity">

    <ImageButton
        android:id="@+id/achievementButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/custom_achievement_button"
        android:contentDescription="@string/redirect_to_achievement_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statButton"
        app:layout_constraintStart_toEndOf="@+id/shopButton"
        app:layout_constraintTop_toTopOf="@+id/shopButton"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/shopButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/custom_shop_button"
        android:contentDescription="@string/redirect_to_shop_page"
        android:enabled="false"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/achievementButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/statButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/custom_stat_button"
        android:contentDescription="@string/redirect_to_stat_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingButton"
        app:layout_constraintStart_toEndOf="@+id/achievementButton"
        app:layout_constraintTop_toTopOf="@+id/achievementButton"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/settingButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/focused_settings"
        android:contentDescription="@string/redirect_to_setting_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statButton"
        app:layout_constraintTop_toTopOf="@+id/statButton"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:contentDescription="@string/redirect_to_clicker_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit"
        android:soundEffectsEnabled="false"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="360dp"
        android:layout_height="520dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/setting_bg"
        android:contentDescription="@string/setting_background"
        app:layout_constraintBottom_toTopOf="@+id/achievementButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/setting_bg" />

    <TextView
        android:id="@+id/background_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/sound_effect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sound_effect"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/background_text"
        app:layout_constraintTop_toBottomOf="@+id/background_text"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/background_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/background_text"
        app:layout_constraintTop_toTopOf="@+id/background_text"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:soundEffectsEnabled="false"/>

    <CheckBox
        android:id="@+id/soundEffect_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/sound_effect_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sound_effect_text"
        app:layout_constraintTop_toTopOf="@+id/sound_effect_text"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/saveProgress"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@null"
        android:contentDescription="@string/save_current_progress"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_effect_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/save_button"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/resetProgress"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:contentDescription="@string/reset_current_progress"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/saveProgress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/saveProgress"
        app:layout_constraintTop_toBottomOf="@+id/saveProgress"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/reset_button"
        android:soundEffectsEnabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>