<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#48FFE5B4">

        <TextView
            android:id="@+id/achievement_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/stat_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/achievementImageRight"
            app:layout_constraintStart_toEndOf="@+id/achievementImageLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/achievementImageLeft"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/left_image_of_achievement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/achievement01" />

        <TextView
            android:id="@+id/achievement_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tapped_50_times"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/achievement_title"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/achievement_title"
            app:layout_constraintTop_toBottomOf="@+id/achievement_title"
            app:layout_constraintVertical_bias="0.289" />

        <ImageView
            android:id="@+id/achievementImageRight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/right_image_of_achievement"
            android:scaleX="-1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/achievement01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>