<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg"
    tools:context=".AchievementActivity">

    <ImageButton
        android:id="@+id/achievementButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/focused_achievement"
        android:contentDescription="@string/redirect_to_achievement_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statButton"
        app:layout_constraintStart_toEndOf="@+id/shopButton"
        app:layout_constraintTop_toTopOf="@+id/shopButton"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/shopButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/custom_shop_button"
        android:contentDescription="@string/redirect_to_shop_page"
        android:enabled="false"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/achievementButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achievementList"
        app:layout_constraintVertical_bias="1.0"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/statButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/custom_stat_button"
        android:contentDescription="@string/redirect_to_stat_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingButton"
        app:layout_constraintStart_toEndOf="@+id/achievementButton"
        app:layout_constraintTop_toTopOf="@+id/achievementButton"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/settingButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/custom_setting_button"
        android:contentDescription="@string/redirect_to_setting_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statButton"
        app:layout_constraintTop_toTopOf="@+id/statButton"
        android:soundEffectsEnabled="false"/>

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:contentDescription="@string/redirect_to_clicker_page"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/achievementList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit"
        android:soundEffectsEnabled="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/achievementList"
        android:layout_width="360dp"
        android:layout_height="520dp"
        android:layout_marginBottom="15dp"
        android:background="#FFE5B4"
        app:layout_constraintBottom_toTopOf="@+id/achievementButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitButton"
        tools:listitem="@layout/list_achievement" />

</androidx.constraintlayout.widget.ConstraintLayout>